@@ -1,5 +1,9 @@
 2002-06-06  John Levon  <moz@compsoc.man.ac.uk>
 
+	* module/op_rtc.c: use check_range
+ 
+2002-06-06  John Levon  <moz@compsoc.man.ac.uk>
+
 	* configure.in: fix typo so non-2.91 is detected
  
 	* module/Makefile.in:
